@@ -2,7 +2,11 @@
 
 FORCE = 0
 SKIP_BOOST = 0
+SKIP_GEO = 0
+SKIP_RANGES = 0
 VALGRIND = 
+USERNAME = root
+PASSWORD =
 
 ################################################################################
 ## unittests target
@@ -49,6 +53,9 @@ VOCHOST := 127.0.0.1
 SERVER_OPT := --configuration none --javascript.startup-directory ./js --javascript.modules-path ./js/server/modules:./js/common/modules --javascript.action-directory ./js/actions/system
 CLIENT_OPT := --javascript.startup-directory ./js --javascript.modules-path ./js/client/modules:./js/common/modules --no-colors --quiet
 STARTFILE := $(VOCDIR)/startup
+CURL := curl
+CURL_OPT := --basic --user "$(USERNAME):$(PASSWORD)"
+
 
 .PHONY: start-server
 
@@ -65,9 +72,9 @@ start-server:
 
 	@test -d "$(VOCDIR)"
 
-	($(VALGRIND) @builddir@/bin/arangod "$(VOCDIR)" $(SERVER_OPT) --pid-file $(PIDFILE) --watch-process $(PID) --server.endpoint tcp://$(VOCHOST):$(VOCPORT) && rm -rf "$(VOCDIR)") &
+	($(VALGRIND) @builddir@/bin/arangod "$(VOCDIR)" $(SERVER_OPT) --pid-file $(PIDFILE) --watch-process $(PID) --server.endpoint tcp://$(VOCHOST):$(VOCPORT) --server.disable-auth true && rm -rf "$(VOCDIR)") &
 
-	while [ ! -s "$(STARTFILE)" ]; do curl -s "http://$(VOCHOST):$(VOCPORT)/_api/version" > "$(STARTFILE)" || sleep 2; done
+	while [ ! -s "$(STARTFILE)" ]; do $(CURL) $(CURL_OPT) -X GET -s "http://$(VOCHOST):$(VOCPORT)/_api/version" > "$(STARTFILE)" || sleep 2; done
 	@rm "$(STARTFILE)"
 	@echo "server has been started."
 	@if [ "$(VALGRIND)" != "" ]; then echo "adding valgrind memorial time..."; sleep 30; else sleep 2; fi
