@@ -160,6 +160,14 @@ namespace triagens {
       public:
 
 ////////////////////////////////////////////////////////////////////////////////
+/// @brief set authentication callback
+////////////////////////////////////////////////////////////////////////////////
+
+        void setAuthenticationCallback (auth_fptr checkAuthentication) {
+          _checkAuthentication = checkAuthentication;
+        }
+
+////////////////////////////////////////////////////////////////////////////////
 /// @brief returns header and body size restrictions
 ////////////////////////////////////////////////////////////////////////////////
 
