@@ -3,8 +3,10 @@ v1.1.x (XXXX-XX-XX)
 * INCOMPATIBLE CHANGE: renamed parameters "connect-timeout" and "request-timeout" 
   for arangosh and arangoimp to "--server.connect-timeout" and "--server.request-timeout"
 
-* INCOMPATIBLE CHANGE: authorization is now required when using the server
+* INCOMPATIBLE CHANGE: authorization is now required on the server side
   Clients sending requests without HTTP autorization will be rejected with HTTP 401
+  To allow backwards compatibility, the server can be started with the option
+  "--server.disable-authentication"
 
 * added options "--server.username" and "--server.password" for arangosh and arangoimp
   These parameters must be used to specify the user and password to be used when
